--- a/onemonthhtml/party-tips/index.html
+++ b/onemonthhtml/party-tips/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 	<title>Party tips from Andrew W.K.</title>
+	<style type="text/css">
+		body {
+			background: blue;
+			color: white
+		}
+		h1 {
+			font-size: 60px;
+		}
+	</style>
+	<script type="text/javascript">
+		alert("I'm annoying!");
+	</script>
 </head>
 <body>
 	<h1>Party Tips</h1>
