course complete - day2

--- a/onemonthhtml/party-tips/index.html
+++ b/onemonthhtml/party-tips/index.html
@@ -11,15 +11,15 @@
 			font-size: 60px;
 		}
 	</style>
-	<script type="text/javascript">
-		alert("I'm annoying!");
-	</script>
 </head>
 <body>
 	<h1>Party Tips</h1>
 	<h2>1. PARTY TIP: Crash Parties</h2>
+	<img src="images/penguin-party.jpg" alt="Penguin Party">
 	<h2>2. PARTY TIP: Party Hard!</h2>
+	<img src="images/piglet-cake.jpg" alt="Piglet Cake">
 	<h2>3. PARTY TIP: Kiss you arm or leg!</h2>
+	<img src="images/cat-kiss.jpg" alt="Cat Kiss">
 	<p>Party tips by Andrew W.K.</p>
 </body>
 </html>
