--- a/onemonthhtml/about-clayton/index.html
+++ b/onemonthhtml/about-clayton/index.html
@@ -9,23 +9,26 @@
 	</head>
 
 	<body>
-
 		<div class="container">
 			<!-- START HERE --> 
 			<h1>About Clayton</h1>
 			<h2>Automating Stuff | Creative Programming</h2>
 
-			I'm currently a QC Engineer at Simulia. I studied Mechanical
-			Engineering with a specialization in Computer Aided Design.
+			<p>I'm currently a QC Engineer at Simulia. I studied Mechanical
+			Engineering and have a Masters in Computer Aided Design.</p>
 
-			My most favorite programming language is Python, after all
-			thats what I used to convert my thoughts to action, which 
-			the computer performed.
+			<p>My most favorite programming language is 
+			<a href="https://www.youtube.com/watch?v=xLVxoz-mQFs" target="_blank">Python</a>, 
+			after all thats what I use to convert my thoughts to action, which 
+			the computer performs.</p>
 
-			LINK: https://www.youtube.com/watch?v=xLVxoz-mQFs
-
+			<a href="https://github.com/wccalvin" target="_blank">
+				<img src="images/github.png" alt="Github">
+			</a>
+			<a href="https://twitter.com/wccalvin" target="_blank">
+				<img src="images/twitter.png" alt="Twitter">
+			</a>
 			<!-- END HERE --> 
 		</div><!-- .container --> 
-
 	</body>
 </html>
