some mods for about

--- a/onemonthhtml/about-clayton/index.html
+++ b/onemonthhtml/about-clayton/index.html
@@ -3,24 +3,39 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>About Clayton</title>
+		<title>Clayton William</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
 		<div class="container">
 			<!-- START HERE --> 
-			<h1>About Clayton</h1>
-			<h2>Automating Stuff | Creative Programming</h2>
+			<h1>Clayton William</h1>
+			<h2>Software QA Engineer <a href="http://www.3ds.com/products-services/simulia/" target="_blank">@SIMULIA</a></h2>
 
-			<p>I'm currently a QC Engineer at Simulia. I studied Mechanical
-			Engineering and have a Masters in Computer Aided Design.</p>
+			<h3>Background</h3>
+			<ul>
+				<li>Mechanical Engineer</li>
+				<li>Computer Aided Design</li>
+			</ul>
 
-			<p>My most favorite programming language is 
-			<a href="https://www.youtube.com/watch?v=xLVxoz-mQFs" target="_blank">Python</a>, 
-			after all thats what I use to convert my thoughts to action, which 
-			the computer performs.</p>
+			<h3>Frameworks</h3>
+			<ul><li>Sikuli</li></ul>
+			
+			<h3>Languages</h3>
+			<ul>
+				<li>Python</li>
+				<li>Perl</li>
+				<li>Ruby</li>
+			</ul>
 
+			<h3>Dev Tools</h3>
+			<ul>
+				<li>Github</li>
+				<li>ViM</li>
+				<li>SublimeText</li>
+			</ul>
+			
 			<a href="https://github.com/wccalvin" target="_blank">
 				<img src="images/github.png" alt="Github">
 			</a>
@@ -30,5 +45,5 @@
 			<!-- END HERE --> 
 		</div><!-- .container --> 
 	</body>
-	
+
 </html>
