some more tweaks to about page

--- a/onemonthhtml/about-clayton/index.html
+++ b/onemonthhtml/about-clayton/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>Clayton William</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -36,14 +37,17 @@
 				<li>SublimeText</li>
 			</ul>
 			
+			<!-- END HERE --> 
+		</div><!-- .container --> 
+
+		<div class="social_icons">
 			<a href="https://github.com/wccalvin" target="_blank">
 				<img src="images/github.png" alt="Github">
 			</a>
 			<a href="https://twitter.com/wccalvin" target="_blank">
 				<img src="images/twitter.png" alt="Twitter">
-			</a>
-			<!-- END HERE --> 
-		</div><!-- .container --> 
+			</a>	
+		</div>
 	</body>
 
 </html>
